<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.guojian.weekcook.activity.DetailsActivity">

    <LinearLayout
        android:id="@+id/ll_details_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_details_back_to_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <ImageView
                android:id="@+id/bn_back_details"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@mipmap/back3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_details_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_name"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_collect_the_cook_data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@mipmap/back3" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_details_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/image_demo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/tv_details_cook_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:text="水煮鱼"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/tv_details_cook_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:text="@string/me" />

                    <TextView
                        android:id="@+id/tv_details_cook_peoplenum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="16dp" />

                    <TextView
                        android:id="@+id/tv_details_cook_preparetime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="16dp" />

                    <TextView
                        android:id="@+id/tv_details_cook_cookingtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="16dp" />

                    <TextView
                        android:id="@+id/tv_details_cook_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="16dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:scrollbars="vertical">

                <com.example.guojian.weekcook.MyListView
                    android:id="@+id/lv_listview_material"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/cook_process"
                    android:textSize="16sp" />

                <com.example.guojian.weekcook.MyListView
                    android:id="@+id/lv_listview_process"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
